feat: implement v0.1.1 — GitHub Packages, Maven Central prep, Javadoc, CHANGELOG
GitHub Packages (Task 3):
- Add packages:write permission to release.yaml
- Add second dotnet nuget push to GitHub Packages feed
  (https://nuget.pkg.github.com/lhol/index.json via GITHUB_TOKEN)
- Simplify nuget-publish job: use NUGET_API_KEY secret directly,
  remove OIDC/NuGet login step that was failing

Maven Central metadata (Task 1 prep):
- Add <name>, <description>, <url>, <licenses>, <developers>, <scm>,
  <distributionManagement> to both pom.xml and java-panama/pom.xml
- Add maven-source-plugin (attach -sources.jar)
- Add maven-javadoc-plugin (attach -javadoc.jar)
- Add maven-gpg-plugin (sign artifacts for OSSRH upload)
- Create .github/workflows/release-maven.yaml workflow with full
  setup instructions in comments (GPG, OSSRH, secrets)

Javadoc (Task 5):
- Huff0.java: class and method Javadoc with @param/@throws
- Fse.java: class and method Javadoc
- Huff0Panama.java: class Javadoc with requirements list, method Javadoc
- FsePanama.java: class Javadoc with requirements list, method Javadoc

CHANGELOG.md (Task 4):
- Created with entries from v0.0.1 through v0.0.17 / unreleased
- Follows Keep a Changelog format with comparison links

Smoke test (Task 6):
- smoke-nuget job in release.yaml: creates a minimal .NET consumer
  project, installs Huff0.Net + Fse.Net from nuget.org, and runs a
  compress/decompress roundtrip to verify the packages work

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>