@@ -3,6 +3,21 @@ package org.karenta.fse;
 import java.lang.foreign.*;
 import java.lang.invoke.MethodHandle;
 
+/**
+ * FSE (Finite State Entropy) compression/decompression via the Java 22+ Panama Foreign Function API.
+ *
+ * <p>This class provides the same compress/decompress operations as {@code org.karenta.fse.Fse}
+ * (the JNI variant) but uses {@code java.lang.foreign} instead of JNI.
+ *
+ * <p><b>Requirements:</b>
+ * <ul>
+ *   <li>Java 22 or later (Foreign Function &amp; Memory API finalized in Java 22, JEP 454)</li>
+ *   <li>JVM flag {@code --enable-native-access=ALL-UNNAMED} at runtime</li>
+ *   <li>The native {@code fse} shared library accessible via {@code java.library.path}</li>
+ * </ul>
+ *
+ * <p>Thread safety: all methods are stateless and may be called concurrently.
+ */
 public final class FsePanama {
     private static final Linker LINKER = Linker.nativeLinker();
     private static final SymbolLookup LOOKUP;
@@ -28,6 +43,13 @@ public final class FsePanama {
 
     private FsePanama() {}
 
+    /**
+     * Compresses {@code input} using FSE via the Panama FFI.
+     *
+     * @param input the raw bytes to compress
+     * @return the compressed bytes
+     * @throws Throwable if compression fails or the native call encounters an error
+     */
     public static byte[] compress(byte[] input) throws Throwable {
         long bound = (long) MH_BOUND.invoke((long) input.length);
         try (Arena arena = Arena.ofConfined()) {
@@ -39,6 +61,15 @@ public final class FsePanama {
         }
     }
 
+    /**
+     * Decompresses {@code compressed} bytes previously produced by {@link #compress(byte[])}.
+     *
+     * @param compressed the FSE-compressed bytes
+     * @param expectedSize the exact length of the original uncompressed data
+     * @return the restored original bytes
+     * @throws IllegalStateException if the decompressed size does not match {@code expectedSize}
+     * @throws Throwable if the native call encounters an error
+     */
     public static byte[] decompress(byte[] compressed, int expectedSize) throws Throwable {
         try (Arena arena = Arena.ofConfined()) {
             MemorySegment src = arena.allocate(compressed.length);
